Add: Better DTO validation and Documentation Update.
