# src/main/kotlin/com/tdl/urlshort/controller/ShortenerController.kt
@@ -7,12 +7,10 @@ import com.tdl.urlshort.dtos.ShortURL
 import com.tdl.urlshort.dtos.URLMetrics
 import com.tdl.urlshort.service.ShorteningService
 import io.micronaut.http.HttpResponse
-import io.micronaut.http.annotation.Body
-import io.micronaut.http.annotation.Controller
-import io.micronaut.http.annotation.Get
-import io.micronaut.http.annotation.Post
+import io.micronaut.http.annotation.*
 import io.micronaut.scheduling.TaskExecutors
 import io.micronaut.scheduling.annotation.ExecuteOn
+import io.swagger.v3.oas.annotations.Operation
 import io.swagger.v3.oas.annotations.tags.Tag
 import javax.validation.Valid
 
@@ -20,17 +18,20 @@ import javax.validation.Valid
 @ExecuteOn(TaskExecutors.IO)
 open class ShortenerController(private val shorteningService : ShorteningService) {
 
-    @Get("/redirect")
-    @Tag(name = "URL Operations")
+    @Post("/redirect")
+    @Operation(summary = "Redirects shortened URL to it's original domain.")
+    @Tag(name = "Public URL Operations")
     open fun redirectURL(@Valid @Body url : ShortURL) : HttpResponse<ApiResponse> = HttpResponse.ok(shorteningService.redirectURL(url))
 
     @Post("/shorten")
-    @Tag(name = "URL Operations")
+    @Operation(summary = "Shortens a given URL.")
+    @Tag(name = "Public URL Operations")
     open fun shortenURL(@Valid @Body url : LongURL) : HttpResponse<URL> = HttpResponse.created(shorteningService.shortenURL(url))
 
-    @Get("/metrics")
-    @Tag(name = "URL Operations")
-    open fun getMetrics(@Valid @Body url : ShortURL) : HttpResponse<URLMetrics> = HttpResponse.ok(shorteningService.getUsageMetrics(url))
+    @Get("/metrics/{hash}")
+    @Operation(summary = "Retrieves URL usage metrics.")
+    @Tag(name = "Internal URL Operations")
+    open fun getMetrics(@PathVariable hash : String) : HttpResponse<URLMetrics> = HttpResponse.ok(shorteningService.getUsageMetrics(hash))
 
 
 }
